test/good/06-collatz-rec.mac

int collatz(int x) {
    print << x;
    if(x ==1) {
        print << "\n";
        return 0;
    }
    else {
        print << " ";
        if(x % 2 == 0) return collatz(x/2);
        else return collatz(3*x+1); 
    }
}



int main() {
    int x = 25;
    printf << "Starting collatz with value: " << x << "\n";
    collatz(25);
    return 0;
}