test/bad/not-a-reference.mac



int main() {
    int a = add_one(4);
    return 0;
}

int add_one(int& a) {
    return a+1;
}